force-app/main/default/objects/Product2/fields/nd_Date_Created__c.field-meta.xml
<CustomField>
    <fullName>nd_Date_Created__c</fullName>
    <label>Date Created</label>
    <type>Date</type>
</CustomField>