force-app/main/default/objects/Product2/fields/nd_Duplicate_Exist__c.field-meta.xml
<CustomField>
    <fullName>nd_Duplicate_Exist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Exist</label>
    <type>Checkbox</type>
</CustomField>