force-app/main/default/objects/Product2/fields/nd_Product_Rec_Type_Dev_Name_picklist__c.field-meta.xml
<CustomField>
    <fullName>nd_Product_Rec_Type_Dev_Name_picklist__c</fullName>
    <defaultValue>$RecordType.DeveloperName</defaultValue>
    <label>Product Rec Type Dev Name (picklist)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stewardship_Item</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>