force-app/main/default/objects/Product2/fields/nd_Product_Record_Type_Dev_Name__c.field-meta.xml
<CustomField>
    <fullName>nd_Product_Record_Type_Dev_Name__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <label>Product Record Type Dev Name</label>
    <type>Text</type>
</CustomField>