force-app/main/default/objects/Product2/fields/ucinn_ascendv2__Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Parent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products_Parent_Product</relationshipName>
    <type>Lookup</type>
</CustomField>