force-app/main/default/objects/Product2/recordTypes/Giving_Society_Acknowledgement.recordType-meta.xml
<RecordType>
    <fullName>Giving_Society_Acknowledgement</fullName>
    <active>true</active>
    <label>Giving Society Acknowledgement</label>
</RecordType>