force-app/main/default/objects/Product2/recordTypes/Stewardship_Item.recordType-meta.xml
<RecordType>
    <fullName>Stewardship_Item</fullName>
    <active>true</active>
    <label>Stewardship Item</label>
</RecordType>