force-app/main/default/objects/Product2/recordTypes/ucinn_ascendv2__Item.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Item</fullName>
    <active>true</active>
    <description>Used with Item benefit types</description>
    <label>Item</label>
</RecordType>