force-app/main/default/objects/Product2/recordTypes/ucinn_ascendv2__Membership_Benefit.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Membership_Benefit</fullName>
    <active>true</active>
    <description>Membership benefit product</description>
    <label>Membership Benefit</label>
</RecordType>