force-app/main/default/objects/Product2/recordTypes/ucinn_ascendv2__POS.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__POS</fullName>
    <active>true</active>
    <description>Point of Sale product</description>
    <label>POS</label>
</RecordType>