force-app/main/default/objects/Product2/validationRules/Stewardship_Item_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Stewardship_Item_Code</fullName>
    <active>true</active>
    <description>Product Code for Stewardship Items cannot exceed 3 characters</description>
    <errorConditionFormula>nd_Product_Record_Type_Dev_Name__c = &quot;Stewardship_Item&quot; &amp;&amp; LEN(ProductCode) &gt; 3</errorConditionFormula>
    <errorMessage>Product Code for Stewardship Items cannot exceed 3 characters</errorMessage>
</ValidationRule>