force-app/main/default/objects/Product2/validationRules/Stewardship_Item_Duplicate.validationRule-meta.xml
<ValidationRule>
    <fullName>Stewardship_Item_Duplicate</fullName>
    <active>true</active>
    <description>There is already an existing Stewardship Item with this product code</description>
    <errorConditionFormula>nd_Product_Record_Type_Dev_Name__c = &quot;Stewardship_Item&quot; &amp;&amp; nd_Duplicate_Exist__c = True</errorConditionFormula>
    <errorMessage>There is already an existing Stewardship Item with this product code</errorMessage>
</ValidationRule>