force-app/main/default/objects/Product2/listViews/Membership_Benefits.listView-meta.xml
<ListView>
    <fullName>Membership_Benefits</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.ucinn_ascendv2__Membership_Benefit</value>
    </filters>
    <label>Membership Benefits</label>
</ListView>