force-app/main/default/objects/Product2/listViews/Membership_Levels.listView-meta.xml
<ListView>
    <fullName>Membership_Levels</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>ucinn_ascendv2__Giving_Society__c</columns>
    <columns>ucinn_ascendv2__Designation__c</columns>
    <columns>ucinn_ascendv2__Payment_Options__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.ucinn_ascendv2__Membership_Level</value>
    </filters>
    <label>Membership Levels</label>
</ListView>