force-app/main/default/objects/Product2/listViews/Stewardship_Items.listView-meta.xml
<ListView>
    <fullName>Stewardship_Items</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.RECORD_TYPE</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.Stewardship_Item</value>
    </filters>
    <label>Stewardship Items</label>
</ListView>